--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,15 @@
 footer {
-  background-color: #f0f0f0;
+  background-color: #f9f9f9;
   color: #808080;
   padding: 4px;
   text-align: center;
+  margin-top: 8px;
+  padding-top: 8px;
+  font-size: 95%;
+}
+
+footer a {
+  color: #808080;
 }
 
 .active {
