--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span style="flex: 0 0 60px"
       ><img src="./assets/img/logo-white-40.png" alt="Fusisoft"
     /></span>
-    <a mat-button routerLink="/home">Cadmus</a>
+    <a mat-button routerLink="/home">Cadmus MQDQ</a>
 
     <button
       mat-button
@@ -110,7 +110,8 @@
   <div layout="row" layout-align="center center">
     <p>
       Cadmus by
-      <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a>
+      <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a> at
+      <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a>
     </p>
   </div>
 </footer>
