--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,19 @@
 <div style="margin: 0 16px">
-  <h2>Cadmus - {{ title }}</h2>
-  <div
-    gdRows="auto 1fr"
-    gdColumns="auto 1fr"
-    gdAreas="image text | content content"
-    gdAlignColumns="center"
-    gdGap="16px"
-    gdRows.lt-md="auto auto 1fr"
-    gdColumns.lt-md="100%"
-    gdAreas.lt-md="image | text | content"
-  >
-    <div gdArea="image">
-      <img src="./assets/img/cadmus-300.png" alt="Cadmus" />
-    </div>
-    <div gdArea="text">
-      <p>
-        Welcome to the Cadmus editor for the
-        <a href="http://mizar.unive.it/mqdq/public/" target="_blank">Musisque Deoque</a>
-        project.
-      </p>
-      <p>
-        You can find the full source code at
-        <a href="https://github.com/vedph" target="_blank">github.com/vedph</a>.
-      </p>
-      <p *ngIf="!logged">Please <a routerLink="/login">login</a> to start.</p>
-    </div>
-
-    <div gdArea="content">
-    </div>
-  </div>
+  <div id="banner"></div>
+  <article>
+    <h2>Cadmus MQDQ</h2>
+    <h3>Musisque Deoque Cadmus Editor</h3>
+    <p>
+      Welcome to the project editing dashboard for
+      <a href="http://mizar.unive.it/mqdq/public/" target="_blank"
+        >Musisque Deoque. A digital archive of Latin poetry, from its origins to
+        the Italian Renaissance</a
+      >.
+    </p>
+    <p *ngIf="!logged" style="margin-bottom: 8px">
+      <a mat-mini-fab color="primary" routerLink="/login"
+        ><mat-icon>login</mat-icon></a
+      ><span style="margin-left: 8px">please login</span>
+    </p>
+  </article>
 </div>
