--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
    as right clicking on the file name and selecting Download link as won't
    work as expected, producing corrupt files).
  */
-@import "assets/icons/material-icons.css";
+/* @import "assets/icons/material-icons.css"; */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
