--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,14 @@
 <div style="margin: 0 16px">
-  <div id="banner"></div>
+  <div class="banner">
+    <img
+      class="banner-img"
+      srcset="
+        ./assets/img/banner-1024.jpg 1024w,
+        ./assets/img/banner-512.jpg   512w
+      "
+      sizes="(max-width: 600px) 512px, 1024px"
+    />
+  </div>
   <article>
     <h2>Cadmus MQDQ</h2>
     <h3>Musisque Deoque Cadmus Editor</h3>
