--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,11 @@
-#banner {
+.banner {
   height: 258px;
-  background-image: url("/assets/img/banner.jpg");
-  background-size: cover;
   margin-bottom: 16px;
+}
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #banner h1 {
   position: relative;
