Refactored for new shell

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,17 +54,18 @@
         }}"
         >feedback</mat-icon
       >
-      <button mat-icon-button [mat-menu-trigger-for]="menu">
+
+      <!-- admin menu -->
+      <button
+        *ngIf="user && user.roles.includes('admin')"
+        mat-button
+        [matMenuTriggerFor]="adminMenu"
+      >
         <mat-icon>more_vert</mat-icon>
       </button>
-      <mat-menu x-position="before" #menu="matMenu">
-        <a
-          mat-menu-item
-          *ngIf="user && user.roles.includes('admin')"
-          routerLink="/admin"
-          >Admin</a
-        >
-        <a mat-menu-item (click)="logout()">Logout</a>
+      <mat-menu #adminMenu>
+        <a mat-menu-item routerLink="/manage-users">Manage users</a>
+        <a mat-menu-item routerLink="/register-user">Register user</a>
       </mat-menu>
     </div>
 
