Upgraded to Angular 14

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,7 @@
     <p>
       Cadmus by
       <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a> at
-      <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a>
+      <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a> - version {{version}}
     </p>
   </div>
 </footer>
